--- a/app/local_modules/my-module/package.json
+++ b/app/local_modules/my-module/package.json
@@ -1,6 +1,6 @@
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
-***REMOVED***
+{
+    "name": "my-module",
+    "description": "This is a test for adding local_module to the app",
+    "version": "0.1.0",
+    "private": true
+}
