--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
         "body-parser": "^1.18.2",
         "express": "latest",
         "express-healthcheck": "^0.1.0",
+        "mime": "^2.2.0",
         "my-module": "file:local_modules/my-module",
         "request": "^2.83.0"
     }
