--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
     "dependencies": {
         "aws-sdk": "^2.176.0",
         "body-parser": "^1.18.2",
-        "express": "latest",
+        "express": "^4.16.2",
+        "express-basic-auth": "^1.1.3",
         "express-healthcheck": "^0.1.0",
         "mime": "^2.2.0",
         "my-module": "file:local_modules/my-module",
