--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,8 @@ phases:
       - cd app
       - pwd
       - echo Installing npm
-      - yum install nodejs npm --enablerepo=epel
+      - apt-get update
+      - apt-get install nodejs npm --enablerepo=epel
       - npm install -g jest
       - npm test
   pre_build:
