--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,7 @@ phases:
       - pwd
       - echo Installing npm
       - apt-get update
-      - apt-get -y install nodejs
+      - apt-get -y install nodejs npm
       - npm install -g jest
       - npm test
   pre_build:
