--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "test": "jest"
+        "test": "jest --forceExit"
     },
     "dependencies": {
         "aws-sdk": "^2.176.0",
