--- a/buildspec.yml
+++ b/buildspec.yml
@@ -62,4 +62,4 @@ artifacts:
 # cache node_modules on S3 to speedup the build process
 cache:
   paths:
-    - 'app/node_modules/**/*'
+#    - 'app/node_modules/**/*'
