--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,24 +21,13 @@ phases:
       - apt-get install nodejs
       - node -v
       - npm -v
-      - echo AWS_DEFAULT_REGION= $AWS_DEFAULT_REGION
-      - echo AWS_REGION= $AWS_REGION
-      - echo CODEBUILD_BUILD_ARN= $CODEBUILD_BUILD_ARN
-      - echo CODEBUILD_BUILD_ID= $CODEBUILD_BUILD_ID
-      - echo CODEBUILD_BUILD_IMAGE= $CODEBUILD_BUILD_IMAGE
-      - echo CODEBUILD_BUILD_SUCCEEDING= $CODEBUILD_BUILD_SUCCEEDING
-      - echo CODEBUILD_INITIATOR= $CODEBUILD_INITIATOR
-      - echo CODEBUILD_KMS_KEY_ID= $CODEBUILD_KMS_KEY_ID
-      - echo CODEBUILD_RESOLVED_SOURCE_VERSION= $CODEBUILD_RESOLVED_SOURCE_VERSION
-      - echo CODEBUILD_SOURCE_REPO_URL= $CODEBUILD_SOURCE_REPO_URL
-      - echo CODEBUILD_SOURCE_VERSION= $CODEBUILD_SOURCE_VERSION
-      - echo CODEBUILD_SRC_DIR $CODEBUILD_SRC_DIR
-      - echo "all env"
-      - env
   pre_build:
     commands:
       - echo install dependencies and running unit test cases
-      - pwd && cd app && npm install && npm test && cd ..
+      - pwd && cd app && npm install
+      - echo "------------------------ Unit Test Cases -----------------------"
+      - npm test && cd ..
+      - echo "------------------------ End of Unit Test Cases ----------------"
       - echo Logging in to Amazon ECR...
       - echo $EARTH2_AWS_ECR_REGION
       - $(aws ecr get-login --no-include-email --region $EARTH2_AWS_ECR_REGION)
