--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,9 +10,16 @@
 
 version: 0.2
 
+env:
+  variables:
+    REPO_NAME: `echo ${CODEBUILD_SOURCE_REPO_URL##*/}| cut -d'.' -f1`
+  parameter-store:
+    APIKey: "/CodeBuild/EARTH2_ECS_SERVICE_CONTAINER_NAME"
 phases:
   install:
     commands:
+      - echo $APIKey
+      - echo $REPO_NAME
       - echo linux version ...
       - lsb_release -a
       - echo change directory to app ...
