--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,8 +17,9 @@ phases:
   install:
     commands:
       - echo $APIKey
-      - REPO_NAME=`echo ${CODEBUILD_SOURCE_REPO_URL##*/}| cut -d'.' -f1`
-      - echo $REPO_NAME
+      - REPO_NAME=`echo ${CODEBUILD_SOURCE_REPO_URL##*/}| cut -d'.' -f1` && echo $REPO_NAME
+      - echo ${CODEBUILD_SOURCE_REPO_URL##*/}| cut -d'.' -f1
+      - echo $CODEBUILD_SOURCE_REPO_URL
       - echo linux version ...
       - lsb_release -a
       - echo change directory to app ...
