--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,10 +16,6 @@ env:
 phases:
   install:
     commands:
-      - echo $APIKey
-      - REPO_NAME=`echo ${CODEBUILD_SOURCE_REPO_URL##*/}| cut -d'.' -f1` && echo $REPO_NAME
-      - echo ${CODEBUILD_SOURCE_REPO_URL##*/}| cut -d'.' -f1
-      - echo $CODEBUILD_SOURCE_REPO_URL
       - echo linux version ...
       - lsb_release -a
       - echo change directory to app ...
@@ -30,6 +26,12 @@ phases:
       - npm -v
   pre_build:
     commands:
+      - echo $APIKey
+      - REPO_NAME=`echo ${CODEBUILD_SOURCE_REPO_URL##*/}| cut -d'.' -f1` && echo $REPO_NAME
+      - echo ${CODEBUILD_SOURCE_REPO_URL##*/}| cut -d'.' -f1
+      - echo $CODEBUILD_SOURCE_REPO_URL
+      - echo CODEBUILD_SOURCE_REPO_URL= $CODEBUILD_SOURCE_REPO_URL		
+      - echo CODEBUILD_SOURCE_VERSION= $CODEBUILD_SOURCE_VERSION
       - echo install dependencies and running unit test cases
       - pwd && cd app && npm install
       - echo "------------------------ Unit Test Cases -----------------------"
