--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,11 +10,6 @@
 
 version: 0.2
 
-env:
-  variables:
-    EARTH2_SOURCE_REPO_URL: $CODEBUILD_SOURCE_REPO_URL
-  parameter-store:
-    APIKey: "/CodeBuild/EARTH2_ECS_SERVICE_CONTAINER_NAME"
 phases:
   install:
     commands:
@@ -34,6 +29,7 @@ phases:
       - echo CODEBUILD_SOURCE_REPO_URL= $CODEBUILD_SOURCE_REPO_URL		
       - echo CODEBUILD_SOURCE_VERSION= $CODEBUILD_SOURCE_VERSION
       - echo install dependencies and running unit test cases
+      - sleep 10
       - pwd && cd app && npm install
       - echo "------------------------ Unit Test Cases -----------------------"
       - npm test && cd ..
