--- a/buildspec.yml
+++ b/buildspec.yml
@@ -46,7 +46,10 @@ phases:
       - echo Build started on `date`
       - echo Building the Docker image $E2_IMAGE_REPO_NAME:$E2_IMAGE_TAG ...          
       - docker build -t $E2_IMAGE_REPO_NAME:$E2_IMAGE_TAG .
-      - docker tag $E2_IMAGE_REPO_NAME:$E2_IMAGE_TAG $E2_AWS_ACCOUNT_ID.dkr.ecr.$E2_AWS_ECR_REGION.amazonaws.com/$E2_IMAGE_REPO_NAME:$E2_IMAGE_TAG      
+      - docker tag $E2_IMAGE_REPO_NAME:$E2_IMAGE_TAG $E2_AWS_ACCOUNT_ID.dkr.ecr.$E2_AWS_ECR_REGION.amazonaws.com/$E2_IMAGE_REPO_NAME:$E2_IMAGE_TAG   
+      - echo Define a task for the app in ECS
+      - E2_RESULT=$(aws ecs list-task-definitions  --region $E2_AWS_ECR_REGION --family-prefix run-customer-profile-repo|grep task|wc -l)
+      - echo $E2_RESULT
   post_build:
     commands:
       - echo Build completed on `date`
