--- a/buildspec.yml
+++ b/buildspec.yml
@@ -51,7 +51,12 @@ phases:
       - cat /codebuild/output/tmp/script.sh
       - E2_RESULT=$(aws ecs list-task-definitions  --region $E2_AWS_ECR_REGION --family-prefix run-customer-profile-repo|grep task|wc -l)
       - echo $E2_RESULT
-      - if [ $E2_RESULT == 1 ];then echo equal1; else echo equal0 ;fi
+      - |
+          if [ "$E2_RESULT" = "1" ]; then
+            echo equal1
+          else
+            echo equal $E2_RESULT
+          fi
   post_build:
     commands:
       - echo Build completed on `date`
