--- a/infrabuildspec.yaml
+++ b/infrabuildspec.yaml
@@ -55,7 +55,7 @@ Resources:
             TaskDefinition: !Ref TaskDefinition
             LoadBalancers: 
                 - ContainerName: "product-service"
-                  ContainerPort: 8001
+                  ContainerPort: 8080
                   TargetGroupArn: !Ref TargetGroup
 
     TaskDefinition:
@@ -68,7 +68,7 @@ Resources:
                   Image: 275396840892.dkr.ecr.us-east-1.amazonaws.com/ecs-refarch-cloudformation/product-service:1.0.0
                   Memory: 128
                   PortMappings:
-                    - ContainerPort: 8001
+                    - ContainerPort: 8080
                   LogConfiguration:
                     LogDriver: awslogs
                     Options:
@@ -88,10 +88,23 @@ Resources:
             Port: 80
             Protocol: HTTP
             Matcher: 
-                HttpCode: 200-299
+                HttpCode: 200
             HealthCheckIntervalSeconds: 10
-            HealthCheckPath: /products
+            HealthCheckPath: /healthcheck
             HealthCheckProtocol: HTTP
             HealthCheckTimeoutSeconds: 5
             HealthyThresholdCount: 2
+            
+     ListenerRule:
+        Type: AWS::ElasticLoadBalancingV2::ListenerRule
+        Properties:
+            ListenerArn: !Ref Listener
+            Priority: 2
+            Conditions:
+                - Field: path-pattern
+                  Values: 
+                    - !Ref Path
+            Actions:
+                - TargetGroupArn: !Ref TargetGroup
+                  Type: forward
             
