--- a/buildspec.yml
+++ b/buildspec.yml
@@ -41,6 +41,10 @@ phases:
       - echo $E2_UNIT_TEST_BANNER_BEGIN
       - npm test && cd ..
       - echo $E2_UNIT_TEST_BANNER_END
+      - echo "remove node_modules to remove JEST dependencies"
+      - rm -rf node_modules
+      - echo "install all dependencies except devDependencies"
+      - npm install --only=production
       - echo Logging in to Amazon ECR...
       - echo $E2_AWS_ECR_REGION
       - $(aws ecr get-login --no-include-email --region $E2_AWS_ECR_REGION)
