--- a/infrabuildspec.yaml
+++ b/infrabuildspec.yaml
@@ -108,7 +108,7 @@ Resources:
         DependsOn: ListenerRule
         Properties: 
 #            Cluster: !Ref Cluster
-            Cluster: !FindInMap [ EnvMap, !Ref EnvironmentType, dev ]
+            Cluster: !FindInMap [ EnvMap, !Ref ServiceName, EnvironmentType]
             Role: "AWSServiceRoleForECS"
             DesiredCount: !Ref DesiredCount
             TaskDefinition: !Ref TaskDefinition
